unpackaged/main/default/objects/Supplier_Quote__c/Supplier_Quote__c.object-meta.xml
<CustomObject>
    <label>Supplier Quote</label>
    <nameField>
        <displayFormat>SQ-{000000}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>