unpackaged/main/default/objects/Supplier_Quote__c/fields/Account_Name_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Email_Template__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name - Email Template</label>
    <type>Text</type>
</CustomField>