unpackaged/main/default/objects/Supplier_Quote__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Updated via process builder. Used in repoting</description>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>