unpackaged/main/default/objects/Supplier_Quote__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>category selected based on supplier</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>