unpackaged/main/default/objects/Supplier_Quote__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>date the status is set to Received</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>