unpackaged/main/default/objects/Supplier_Quote__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <description>date the email is sent/status is set to Requested</description>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>