unpackaged/main/default/objects/Supplier_Quote__c/fields/Days_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Receive__c</fullName>
    <description>Difference between Date Received and Date Requested</description>
    <formula>IF( RecordType.Name = &#39;NZ Supplier Quote&#39;,
 Date_Received__c-Date_Requested__c,
 IF( RecordType.Name = &#39;AU Supplier Quote&#39;,
 /* business days calculations */
 (5 * ( FLOOR( ( Date_Received__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Date_Received__c - DATE( 1900, 1, 8), 7 ) ) )
 -
 (5 * ( FLOOR( ( Date_Requested__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Date_Requested__c - DATE( 1900, 1, 8), 7 ) ) )
 ,
 null
 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Receive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>