unpackaged/main/default/objects/Supplier_Quote__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the misc/other category</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>