unpackaged/main/default/objects/Supplier_Quote__c/fields/Loss_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Comments__c</fullName>
    <label>Loss Reason Comments</label>
    <type>TextArea</type>
</CustomField>