unpackaged/main/default/objects/Supplier_Quote__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>