unpackaged/main/default/objects/Supplier_Quote__c/fields/NZ_Quote_Request_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>NZ_Quote_Request_Email_Subject__c</fullName>
    <formula>IF(
ISBLANK( Opportunity__r.Tender_Date__c),
Opportunity__r.Opportunity_ID__c &amp; &quot; - &quot; &amp;  Supplier__r.Name &amp; &quot; - &quot; &amp;  Site_Address_Email_Template__c ,
 TEXT(Opportunity__r.Tender_Date__c) &amp; &quot; &quot; &amp; Opportunity__r.Opportunity_ID__c &amp; &quot; - &quot; &amp;  Supplier__r.Name &amp; &quot; - &quot; &amp;  Site_Address_Email_Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NZ Quote Request - Email Subject</label>
    <type>Text</type>
</CustomField>