unpackaged/main/default/objects/Supplier_Quote__c/fields/Opportunity_Owner_Name_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name_Email_Template__c</fullName>
    <formula>Opportunity__r.Owner.FirstName&amp;&quot; &quot;&amp;Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name - Email Template</label>
    <type>Text</type>
</CustomField>