unpackaged/main/default/objects/Supplier_Quote__c/fields/Site_Address_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Email_Template__c</fullName>
    <formula>Opportunity__r.Site_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address - Email Template</label>
    <type>Text</type>
</CustomField>