unpackaged/main/default/objects/Supplier_Quote__c/fields/Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email__c</fullName>
    <formula>Supplier__r.Business_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Email</label>
    <type>Text</type>
</CustomField>