unpackaged/main/default/objects/Supplier_Quote__c/fields/Supplier_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Reference_Number__c</fullName>
    <label>Supplier Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>