unpackaged/main/default/objects/Supplier_Quote__c/fields/Take_Off_Category__c.field-meta.xml
<CustomField>
    <fullName>Take_Off_Category__c</fullName>
    <label>Take-Off Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Frame and Truss</fullName>
            </value>
            <value>
                <fullName>Lock Up</fullName>
            </value>
            <value>
                <fullName>Fix Out</fullName>
            </value>
            <value>
                <fullName>Final Fit</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Supply &amp; Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>