unpackaged/main/default/objects/Supplier_Quote__c/fields/Total_value_excluding_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_value_excluding_GST__c</fullName>
    <description>Total Amount minus the Goods and Services Tax</description>
    <label>Total value excluding GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>