unpackaged/main/default/objects/Supplier_Quote__c/recordTypes/AU_Supplier_Quote.recordType-meta.xml
<RecordType>
    <fullName>AU_Supplier_Quote</fullName>
    <active>true</active>
    <label>AU Supplier Quote</label>
</RecordType>