unpackaged/main/default/objects/Supplier_Quote__c/recordTypes/NZ_Supplier_Quote.recordType-meta.xml
<RecordType>
    <fullName>NZ_Supplier_Quote</fullName>
    <active>true</active>
    <label>NZ Supplier Quote</label>
</RecordType>