unpackaged/main/default/objects/Supplier_Quote__c/validationRules/Loss_Reason_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Comments</fullName>
    <active>true</active>
    <description>Loss Reason Comments - Make mandatory if Loss Reason = Other</description>
    <errorConditionFormula>AND(
ISPICKVAL(Loss_Reason__c  , &quot;Other&quot;),
ISBLANK(Loss_Reason_Comments__c),
RecordType.DeveloperName = &quot;AU_Supplier_Quote&quot;
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason_Comments__c</errorDisplayField>
    <errorMessage>Please provide Loss Reason Comments</errorMessage>
</ValidationRule>