unpackaged/main/default/objects/Supplier_Quote__c/validationRules/Quote_Office_Editing_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Office_Editing_Only</fullName>
    <active>true</active>
    <description>This record isn&#39;t available for editing while its parent Opportunity is in Qualifying or Proposal In Progress Stages</description>
    <errorConditionFormula>(ISPICKVAL( Opportunity__r.StageName , &quot;Qualifying&quot;) ||
ISPICKVAL(Opportunity__r.StageName, &quot;Proposal In Progress&quot;)) 
&amp;&amp;
NOT(OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;NZ Quote Office&quot;, $Profile.Name = &quot;Integrations User&quot;))

&amp;&amp;

(
( Opportunity__r.RecordType.DeveloperName = &quot;NZ_Estimate_Opportunity&quot;) ||
(Opportunity__r.RecordType.DeveloperName = &quot;NZ_Farm_Shed_Opportunity&quot;) ||
(Opportunity__r.RecordType.DeveloperName = &quot;NZ_Schedule_Opportunity&quot;)
)

&amp;&amp;
RecordType.DeveloperName=&quot;NZ_Supplier_Quote&quot;</errorConditionFormula>
    <errorDisplayField>Account_Record_Type__c</errorDisplayField>
    <errorMessage>This record isn&#39;t available for editing while its parent Opportunity is in Qualifying or Proposal In Progress Stages</errorMessage>
</ValidationRule>