unpackaged/main/default/objects/Supplier_Quote__c/listViews/Outstanding_Supplier_Quotes.listView-meta.xml
<ListView>
    <fullName>Outstanding_Supplier_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Supplier__c</columns>
    <columns>Date_Requested__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Received__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>notEqual</operation>
        <value>Internal QS,External QS,Repricing</value>
    </filters>
    <label>Outstanding Supplier Quotes</label>
    <sharedTo>
        <roleAndSubordinates>NZ_Quote_Office_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>